--- a/plot_map_state_m50.ipynb
+++ b/plot_map_state_m50.ipynb
@@ -8,13 +8,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mobility statistics from Descartes Labs are published on [github.com/descarteslabs/DL-COVID-19](https://github.com/descarteslabs/DL-COVID-19)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import plotly\n",
     "import plotly.express as px"
    ]
   },
@@ -27,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,13 +124,13 @@
        "4  2020-03-01  California          CA     6  4.122         60"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('.\\dataDir\\DL-state-mobility_clean.csv')\n",
+    "df = pd.read_csv('.\\data\\DL-state-mobility_clean.csv')\n",
     "df.head()"
    ]
   },
@@ -137,34 +143,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    8007.000000\n",
-       "mean       55.733109\n",
-       "std        34.572357\n",
-       "min         0.000000\n",
-       "25%        30.000000\n",
-       "50%        57.000000\n",
-       "75%        80.000000\n",
-       "max       925.000000\n",
-       "Name: m50_index, dtype: float64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.m50_index.describe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +181,8 @@
     "                          scope=\"usa\",\n",
     "                          animation_frame=\"date\",\n",
     "                          title= 'median distance as a percentage of baseline in February')\n",
-    "#fig.show()\n",
-    "fig.write_html(\"map_state_m50_demo.html\")"
+    "fig.show()\n",
+    "#fig.write_html(\"map_state_m50_demo.html\")"
    ]
   }
  ],
