--- a/plot_map_state_m50.ipynb
+++ b/plot_map_state_m50.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4  2020-03-01  California          CA     6  4.122         60"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
     "                          animation_frame=\"date\",\n",
     "                          title= 'median distance as a percentage of baseline in February')\n",
     "fig.show()\n",
-    "#fig.write_html(\"map_state_m50_demo.html\")"
+    "fig.write_html(\"map_state_m50_demo.html\")"
    ]
   }
  ],
